--- a/Cube/package.json
+++ b/Cube/package.json
@@ -15,14 +15,19 @@
     "@ionic/vue-router": "^5.4.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cookie": "^0.4.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-rc.1"
+    "vuex": "^4.0.0-rc.1",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@capacitor/cli": "2.4.6",
+    "@types/cookie": "^0.4.0",
     "@types/jest": "^24.0.19",
+    "@types/js-cookie": "^2.2.6",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
