Ajout des fonctions de hashage de mot de passe, Verification que l'email n'est pas déjà utilisé lors de l'inscription, Ajouter les types de ressources, Role par défaut = 1

--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
         "superlogin": "^0.6.1"
     },
     "dependencies": {
+        "blueimp-md5": "^2.18.0",
+        "crypto-js": "^4.0.0",
         "dotenv": "^8.2.0",
         "jsonwebtoken": "^8.5.1"
     }
